additional css coding

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,10 +81,13 @@ img {
   #reset {
     position: relative;
     bottom: 60px;
+    background-color: #500424;
+    border-color: palevioletred;
   }
 
   #start {
     background-color: #500424;
+    border-color: palevioletred;
   }
 
   #decorate {
